# EventMaster

./: .dockerignore  .gitignore  .terraformignore  AGENTS.md  CLAUDE.md  CLOUDFLARE_DEPLOYMENT.md  QUICK_START.md  README.md  package-lock.json  package.json
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
.specify/memory/: constitution.md
apps/api/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  seed_data.py
apps/api/src/: __init__.py  database.py
apps/api/src/core/: config.py  deps.py  jwks.py  logging.py  rate_limit.py  sanitize.py  security.py
apps/api/src/domain/: event_approval.py  registration.py
apps/api/src/models/: __init__.py  event.py  registration.py  user.py
apps/api/src/routes/: __init__.py  auth.py  checkin.py  events.py  registrations.py  users.py
apps/api/src/schemas/: __init__.py  approval.py  auth.py  checkin.py  event.py  registration.py  user.py
apps/web/: .env.example  App.tsx  index.html  package-lock.json  package.json  types.ts
apps/web/components/: ErrorBoundary.tsx  Navbar.tsx  (+1 more)
docs/: 3DAY_MVP_PLAN.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  BACKEND_ARCHITECTURE_REVIEW.md  BACKEND_TEST_REPORT.md  FRONTEND_ARCH.md  MVP_SPEC.md  OPENAPI_SCHEMA_FIXES.md  PR_DESCRIPTION.md  openapi.yaml
infra/terraform/: STATE_BACKUP_STRATEGY.md  backend.tf
specs/001-event-approval-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dev-deployment-arch/: COGNITO_TESTING.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+59 files in other folders)
