[tool.poetry]
name = "eventmaster-api"
version = "0.1.0"
description = "EventMaster API"
authors = ["EventMaster Team <support@eventmaster.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.0"
uvicorn = { version = "0.27.0", extras = ["standard"] }
python-multipart = "0.0.6"
sqlalchemy = "2.0.25"
alembic = "1.13.1"
psycopg2-binary = "2.9.9"
python-jose = { version = "3.3.0", extras = ["cryptography"] }
passlib = { version = "1.7.4", extras = ["bcrypt"] }
bcrypt = "4.1.2"
python-dotenv = "1.0.0"
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
email-validator = "2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "0.23.3"
httpx = "0.26.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
